<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textAlignment="center"
        android:text="@string/set_group_cover_image" />

    <Button
        android:id="@+id/select_image_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_an_image" />

    <ImageView
        android:id="@+id/selected_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="300dp"
        android:maxHeight="300dp"
        android:contentDescription="@string/selected_image" />

</LinearLayout>