<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >


    <TextView
        android:id="@+id/headerTextViewTime"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="@drawable/header_background"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/itemTime"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/headerTextViewPlaces"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="@drawable/header_background"
        android:gravity="center"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/itemPlaces"/>

    <TextView
        android:id="@+id/headerTextViewNote"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="@drawable/header_background"
        android:gravity="center"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/itemNote"/>

</LinearLayout>
